--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "dcl-edit-test-library",
   "version": "1.0.0",
   "description": "Dcl SDK Library",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "docs": "api-documenter markdown --output-folder docs/ --input-folder temp/",
     "build": "rm -rf temp/ && rollup -c && npm run docs",
     "link": "npm link && rollup --watch -c "
   },
-  "typings": "./dist/index.d.ts",
   "decentralandLibrary": {
-    "main": "./dist/index.js"
+    "main": "./src/index.ts"
   },
   "keywords": [
     "dcl",
